@@ -154,6 +154,12 @@ local function for_idle(fn, reverse)
     end, fn, reverse)
 end
 
+local function for_injured(fn, reverse)
+    for_iter(dfhack.units.getCitizens(true), function(unit)
+        return unit.health and unit.health.flags.needs_healthcare
+    end, fn, reverse)
+end
+
 local function count_units(for_fn, which)
     local count = 0
     for_fn(function() count = count + 1 end)
@@ -166,7 +172,43 @@ local function count_units(for_fn, which)
     end
 end
 
-local function summarize_units(for_fn, which)
+local function has_functional_hospital(site)
+    for _,loc in ipairs(site.buildings) do
+        if not df.abstract_building_hospitalst:is_instance(loc) or loc.flags.DOES_NOT_EXIST then
+            goto continue
+        end
+        local diag, bone, surg = false, false, false
+        for _,occ in ipairs(loc.occupations) do
+            if df.unit.find(occ.unit_id) then
+                if occ.type == df.occupation_type.DOCTOR or occ.type == df.occupation_type.DIAGNOSTICIAN then
+                    diag = true
+                end
+                if occ.type == df.occupation_type.DOCTOR or occ.type == df.occupation_type.BONE_DOCTOR then
+                    bone = true
+                end
+                if occ.type == df.occupation_type.DOCTOR or occ.type == df.occupation_type.SURGEON then
+                    surg = true
+                end
+            end
+        end
+        if diag and bone and surg then
+            return true
+        end
+        ::continue::
+    end
+end
+
+local function injured_units(for_fn, which)
+    local message = count_units(for_fn, which)
+    if message then
+        if not has_functional_hospital(dfhack.world.getCurrentSite()) then
+            message = message .. '; no functional hospital!'
+        end
+        return message
+    end
+end
+
+local function summarize_units(for_fn)
     local counts = {}
     for_fn(function(unit)
         local names = races[unit.race].caste[unit.caste].caste_name
@@ -375,6 +417,13 @@ NOTIFICATIONS_BY_IDX = {
         default=false,
         fn=curry(summarize_units, for_wildlife),
         on_click=curry(zoom_to_next, for_wildlife),
+    },
+    {
+        name='injured',
+        desc='Shows number of injured citizens and a warning if there is no functional hospital.',
+        default=true,
+        fn=curry(injured_units, for_injured, 'injured citizen'),
+        on_click=curry(zoom_to_next, for_injured),
     },
     {
         name='idlers',
