@@ -37,6 +37,7 @@ Template for new versions:
 
 ## New Features
 - `buildingplan`: dimension tooltip is now displayed for constructions and buildings that are designated over an area
+- `gui/notify`: new notification type: injured citizens; also displays warning if your hospital is not functional (or if you have no hospital)
 
 ## Fixes
 - `item`: don't match uncollected spider webs when you search for "silk"
